2020-09-14  Dave Cross <dave@perlhack.com>

  * Catch up on four years of commits

  * Some CI improvements

  * Some perlcritic suggestions

2016-12-08  Dave Cross <dave@dave.org.uk>

  * lib/AudioFile/Info/MP3/ID3Lib.pm: Bump version for another upload attempt

  * lib/AudioFile/Info/MP3/ID3Lib.pm: Documentation typo

  * Build.PL, lib/AudioFile/Info/MP3/ID3Lib.pm: Packaging fixes

2016-10-03  Dave Cross <dave@dave.org.uk>

  * .travis.yml: Test against Perl 5.22. Ignore Build.pm in coverage reports.

2015-07-19  Dave Cross <dave@dave.org.uk>

  * .travis.yml: Install the id3lib dev package

  * .travis.yml: Force new Travis run

2015-07-18  Dave Cross <dave@dave.org.uk>

  * .travis.yml: Remove 5.22 from .travis.yml

2015-07-17  Dave Cross <dave@dave.org.uk>

  * .gitignore, .travis.yml: Added .gitignore and .travis.yml

  * Build.PL, MANIFEST, lib/AudioFile/Info/MP3/ID3Lib.pm, t/1_read.t,
  t/2_write.t, t/3_pod.t, t/4_pod_coverage.t: Added META.json to MANIFEST

2008-07-01  Dave Cross <dave@dave.org.uk>

  * Build.PL: Increment version number

  * Build.PL: Removed execute flag

2008-06-30  Dave Cross <dave@dave.org.uk>

  * Build.PL, lib/AudioFile/Info/MP3/ID3Lib.pm: Use subversion revision number.
  Make YAML recommended by build.

  * Build.PL: Various fixes

2005-10-10  Dave Cross <dave@dave.org.uk>

  * MANIFEST: Added t/4_pod_coverage.t

  * MANIFEST, lib/AudioFile/Info/Build.pm, lib/AudioFile/Info/MP3/ID3Lib.pm,
  t/4_pod_coverage.t: Added t/4_pod_coverage.t

2004-11-21  Dave Cross <dave@dave.org.uk>

  * lib/AudioFile/Info/MP3/ID3Lib.pm: Fixed mp3 writing support

  * t/1_read.t, t/2_write.t, t/3_pod.t: Added new test files

  * t/2_pod.t: Renamed to 3_pod.t

  * t/1.t: Renamed to 1_read.t

  * lib/AudioFile/Info/MP3/ID3Lib.pm: Added writing support

  * lib/AudioFile/Info/Build.pm: Changed weightings

  * META.yml: Shouldn't be in CVS

  * MANIFEST: Changed test files

  * Build.PL: Supports writing MP3s

2004-05-22  Dave Cross <dave@dave.org.uk>
